# ChatLab

./: CMakeLists.txt
.github/workflows/: clang-format.yml  just-build.yml  style-checker.yml
infra/scripts/: build.py
scripts/: build.py
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp
src/common/: base.hpp  status.hpp
src/compatibility/: compatibility.hpp
src/frontend/: CMakeLists.txt  cmdclient.cpp  cmdclient.hpp
src/network/: netiface.h  sockiface.hpp
src/server/: CMakeLists.txt  pollserver.cpp  pollserver.hpp  server.cpp  server.hpp
