cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "ChatLab")

project(${PROJECT_NAME} VERSION 0.1)

option(BUILD_SERVER "Build server" TRUE)
option(BUILD_CLIENT "Build client" TRUE)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/_install" CACHE PATH "Default install path" FORCE)
endif()

message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
message(STATUS "CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
message(STATUS "BUILD_SERVER: ${BUILD_SERVER}")
message(STATUS "BUILD_CLIENT: ${BUILD_CLIENT}")

add_subdirectory(src)
